--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+# 🛑 CRITICAL SECURITY (Secrets)
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+frontend/.env
+
+# 📦 Dependencies (Too heavy for GitHub)
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# 🏗️ Build Outputs & Artifacts
+dist/
+build/
+coverage/
+
+# ⛓️ Hardhat Specific (Blockchain Build Files)
+backend/artifacts/
+backend/cache/
+backend/typechain-types/
+
+# 🖥️ System Files
+.DS_Store
+Thumbs.db
