--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 🛑 CRITICAL SECURITY (Secrets)
+# CRITICAL SECURITY (Secrets)
 .env
 .env.local
 .env.development.local
@@ -7,21 +7,21 @@
 backend/.env
 frontend/.env
 
-# 📦 Dependencies (Too heavy for GitHub)
+# Dependencies (Too heavy for GitHub)
 node_modules/
 backend/node_modules/
 frontend/node_modules/
 
-# 🏗️ Build Outputs & Artifacts
+# Build Outputs & Artifacts
 dist/
 build/
 coverage/
 
-# ⛓️ Hardhat Specific (Blockchain Build Files)
+# Hardhat Specific (Blockchain Build Files)
 backend/artifacts/
 backend/cache/
 backend/typechain-types/
 
-# 🖥️ System Files
+# System Files
 .DS_Store
 Thumbs.db
